[package]
name = "inference-proxy-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
tokio = { version = "1.47.1", features = ["sync", "rt"]}
dotenvy = "0.15.7"
url = "2.5.4"
reqwest = { version = "0.12.22", features = ["json"] }
serde_json = "1.0.142"
futures = "0.3.31"
bytes = "1.10.1" 
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
